basic mode created

--- a/src/app/components/crud-main-component/components/crud-table-component/crud-table-component.component.html
+++ b/src/app/components/crud-main-component/components/crud-table-component/crud-table-component.component.html
@@ -11,10 +11,14 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<td>eda</td>
-			<td>eda</td>
-			<td>eda</td>
+		<tr *ngFor="let book of data">
+			<td>{{book.isbn}}</td>
+			<td>{{book.bookName}}</td>
+			<td>{{book.authorName}}</td>
+			<td>{{book.publishDate}}</td>
+			<td>{{book.language}}</td>
+			<td>{{book.editorialName}}</td>
+			<td><input type="button" value="Delete" (click)="onDeleteClick(book)"></td>
 		</tr>
 	</tbody>
 </table>
