--- a/src/app/components/crud-main-component/crud-main-component.component.html
+++ b/src/app/components/crud-main-component/crud-main-component.component.html
@@ -1,41 +1,3 @@
-<div>
-	<span>ISBN:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Book name:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Author:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Publish date</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Language:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Editorial:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Status:</span>
-	<input type="text" />
-</div>
-
-<div>
-	<span>Quantity:</span>
-	<input type="text" />
-</div>
+<app-crud-form-component></app-crud-form-component>
 
 <app-crud-table-component></app-crud-table-component>
