--- a/src/app/components/crud-main-component/components/crud-form-component/crud-form-component.component.css
+++ b/src/app/components/crud-main-component/components/crud-form-component/crud-form-component.component.css
@@ -16,6 +16,13 @@
 
 .crud-form > div > input {
 	margin: 10px;
+	width: 50%;
+}
+
+.crud-form > div > select {
+	margin: 10px;
+	flex-grow: 1;
+	min-width: 60%;
 }
 
 .crud-submit{
