Renaming files basically

--- a/src/app/components/crud-main/components/crud-form/crud-form.component.html
+++ b/src/app/components/crud-main/components/crud-form/crud-form.component.html
@@ -43,7 +43,7 @@
 
 	<div class="crud-input">
 		<span>Status:</span>
-		<input type="text" />
+		<input type="checkbox" />
 	</div>
 
 	<div class="crud-input">
