--- a/src/app/components/crud-main/components/crud-table/crud-table.component.html
+++ b/src/app/components/crud-main/components/crud-table/crud-table.component.html
@@ -11,7 +11,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr *ngFor="let book of data">
+		<tr *ngFor="let book of books">
 			<td>{{book.isbn}}</td>
 			<td>{{book.bookName}}</td>
 			<td>{{book.authorName}}</td>
