TODO tasks added to add styles

--- a/src/app/components/crud-main/components/crud-form/crud-form.component.css
+++ b/src/app/components/crud-main/components/crud-form/crud-form.component.css
@@ -1,32 +1,1 @@
-.crud-form {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	max-height: 100px;
-}
-
-.crud-form > div {
-	display: flex;
-}
-
-.crud-form > div > span {
-	flex-grow: 1;
-	padding: 10px;
-}
-
-.crud-form > div > input {
-	margin: 10px;
-	width: 50%;
-}
-
-.crud-form > div > select {
-	margin: 10px;
-	flex-grow: 1;
-	min-width: 60%;
-}
-
-.crud-submit{
-	display: flex;
-	flex-direction: row-reverse;
-	padding: 10px;
-}
+/* TODO: Complete styles */
